<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search_trends"
    android:background="@color/Twit">

    <TextView
        android:id="@+id/appName"
        android:layout_width="153dp"
        android:layout_height="46dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/emo_tela"
        android:text="@string/emo_tela"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="405dp"
        android:layout_height="566dp"
        android:layout_margin="10dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="4dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName" >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/emo_tela"
                android:text="@string/search_trends"
                android:textColor="#039BE5"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <SearchView
                android:id="@+id/searchTrends"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="49dp"
                android:background="@drawable/input_style"
                android:padding="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/todayTrends"
                android:layout_width="150dp"
                android:layout_height="39dp"
                android:layout_marginTop="145dp"
                android:fontFamily="@font/emo_tela"
                android:text="@string/today_trends"
                android:textColor="@color/Twit"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.073"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchTrends"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/details"
                android:layout_width="149dp"
                android:layout_height="46dp"
                android:layout_marginTop="20dp"
                android:text="@string/abc_n_123"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.077"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/todayTrends" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>



    <!-- TODO: Update blank fragment layout -->


</androidx.constraintlayout.widget.ConstraintLayout>