<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home"
    android:background="@color/Twit">


    <TextView
        android:id="@+id/textView"
        android:layout_width="153dp"
        android:layout_height="46dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/emo_tela"
        android:text="@string/emo_tela"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="405dp"
        android:layout_height="566dp"
        android:layout_margin="10dp"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="330dp"
                android:layout_height="251dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_style">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_tweet_link" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="14dp">

                <ImageButton
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/cicons"
                    android:src="@drawable/ic_pieg" />

                <ImageButton

                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/cicons"
                    android:src="@drawable/ic_barg" />

                <ImageButton
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/cicons"
                    android:src="@drawable/ic_pieg" />


            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_style"
                android:text="@string/analyze"
                android:textColor="@color/white" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>